tests/typing/bad/testfile-multiple_parameters2-1.scala
class A {
    def m(x: Int, y: Int, x: Boolean) { }
}
object Main { def main(args: Array[String]) { } }
